--- a/FUNCIONÁRIO(ADM)/login/styles.css
+++ b/FUNCIONÁRIO(ADM)/login/styles.css
@@ -2,9 +2,68 @@ body, html {
     height: 100%;
     margin: 0;
     box-sizing: border-box;
-    background-image: url('/imagensRaiz/background.png');
+}
+
+.background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-image: url('/imagens_telas/background.png');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.container {
+    justify-content: center;
+    align-items: center;
+}
+
+.img-container {
+    display: flex;
+    
+}
+
+.imgLogin {
+    width: 450px;
+    height: 450px;
+}
+
+.login {
+    font-weight: bold;
+    font-size: 30px;
+
+}
+
+.conteudo {
+    text-align: center;
+}
+
+.input-field {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    box-sizing: border-box; /* Garante que o padding não ultrapasse a largura do container */
+}
+
+.login-button {
+    width: 40%;
+    padding: 10px;
+    margin: 20px 0;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    box-sizing: border-box; /* Garante que o padding não ultrapasse a largura do container */
+}
+
+.login-button:hover {
+    background-color: #45a049;
 }
