--- a/FUNCIONÁRIO(ADM)/login/styles.css
+++ b/FUNCIONÁRIO(ADM)/login/styles.css
@@ -1,5 +1,6 @@
 body, html {
     height: 100%;
+    width: 100%;
     margin: 0;
     box-sizing: border-box;
 }
@@ -18,18 +19,19 @@ body, html {
 }
 
 .container {
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .img-container {
     display: flex;
-    
 }
 
 .imgLogin {
-    width: 450px;
-    height: 450px;
+    width: 400px;
+    height: 400px;
 }
 
 .login {
@@ -38,7 +40,7 @@ body, html {
     font-weight: 600;
     font-style: normal;
     margin-top: 0;
-    margin-bottom: 5;
+    margin-bottom: 15px;
 }
 
 .conteudo {
@@ -46,8 +48,7 @@ body, html {
 }
 
 .input-field {
-    display: block;
-    width: 100%;
+    width: 70%;
     height: 45px;
     padding: 20px;
     margin: 10px 0;
@@ -104,7 +105,6 @@ a {
     border: none;
     border-radius: 30px;
     cursor: pointer;
-    box-sizing: border-box; /* Garante que o padding não ultrapasse a largura do container */
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
