--- a/FUNCIONÁRIO(ADM)/telaInicial/styles.css
+++ b/FUNCIONÁRIO(ADM)/telaInicial/styles.css
@@ -124,12 +124,27 @@ body, html {
     display: flex;
 }
 
-.imgHorario {
+.imgHorario,
+.imgFrase {
     width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 20px;
+}
+
+.book-section {
+    max-width: 65%; /* Ajuste a largura máxima do contêiner de livros */
+    margin: 0 auto; /* Centralize o contêiner na página */
+    padding-top: 25px;
+    padding-bottom: 10px;
+}
+
+.title {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
 }
 
 .book-list {
@@ -140,24 +155,28 @@ body, html {
     display: flex;
     flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
     gap: 10px; /* Espaçamento entre os livros */
-    justify-content: center; /* Centraliza os itens horizontalmente */
+    justify-content: center;
+    max-width: 70%; /* Ajuste a largura máxima do contêiner de livros */
+    margin: 0 auto;
+    margin-bottom: 30px;
+    cursor: pointer;
 }
 
 .book-item {
     flex: 1 1 calc(16.66% - 20px); /* Faz com que cada item ocupe cerca de 1/6 do espaço disponível, com 10px de espaçamento */
     box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
-    max-width: calc(12% - 20px); /* Garante que o item não exceda 1/6 do espaço disponível */
-    background: #f0f0f0; /* Adiciona uma cor de fundo para que você possa ver a área do item */
-    padding: 10px; /* Adiciona um padding interno */
-    border-radius: 8px; /* Adiciona bordas arredondadas */
-    text-align: center; /* Centraliza o texto dentro do item */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Adiciona uma sombra leve ao redor dos itens */
+    max-width: calc(16.66% - 20px); /* Garante que o item não exceda 1/6 do espaço disponível */
+    background: #FFF;
+    padding: 4px; /* Adiciona um padding interno */
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
 }
 
 .book-image {
-    width: 80%; /* Faz com que a imagem ocupe a largura total do item */
-    height: auto; /* Mantém a proporção da imagem */
-    border-radius: 8px; /* Adiciona bordas arredondadas à imagem */
+    width: 45%;
+    height: auto;
+    border-radius: 8px;
 }
 
 .book-item:hover {
@@ -170,12 +189,68 @@ body, html {
 
 .book-title {
     font-size: 14px;
-    margin: 0 0 10px;
+    margin: 0 0 4px;
 }
 
-.book-author,
-.book-course {
+.book-author {
     font-size: 12px;
     color: #555;
     margin: 0;
+}
+
+.book-course {
+    font-size: 12px;
+    color: #000;
+    margin: 0;
+    margin-bottom: 8px;
+    font-weight: bold;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.imgFrase {
+    margin-bottom: 20px;
+}
+
+footer {
+    display: block;
+	bottom: 0;
+	background: #fff;
+	width: 100%;
+	color:#000;
+	text-align: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
+    font-size: 14px;
+}
+footer a {
+    color: #FF735C;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #3F7263;
+}
+
+@media screen and (max-width: 1024px) {
+    .book-list {
+        max-width: 80%; /* Ajuste a largura máxima do contêiner de livros */
+    }
+    
+    .book-title {
+        font-size: 12px;
+    }
+    
+    .book-author {
+        font-size: 10px;
+    }
+    
+    .book-course {
+        font-size: 10px;
+    }
 }
