--- a/FUNCIONÁRIO(ADM)/perfil/styles.css
+++ b/FUNCIONÁRIO(ADM)/perfil/styles.css
@@ -5,7 +5,7 @@ body, html {
     box-sizing: border-box;
 }
 
-.container {
+.header {
     justify-content: center;
     align-items: center;
 }
@@ -95,23 +95,90 @@ body, html {
     text-align: center;
 }
 
+.p-i-container {
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100vh; /* Adiciona esta linha para ocupar a altura total da viewport */
+    box-sizing: border-box;
+}
+
+.perfil {
+    font-size: 30px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    margin-top: 0;
+    margin-bottom: 15px;
+    margin-top: 30px;
+    text-align: center;
+}
+
+.profile-container {
+    text-align: center;
+}
+
+.img-container {
+    margin-bottom: 20px;
+}
+
+.img-container img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #ccc;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+/* .custom-file-upload {
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #3F7263;
+    color: white;
+    border-radius: 4px;
+    margin-bottom: 10px;
+} */
+
+/* .button-save[type="submit"] {
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #FF735C;
+    color: white;
+    border: none;
+    border-radius: 4px;
+} */
+
+.input-group {
+    flex-direction: column;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.text-input {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    width: 30%;
+    margin: 0 auto;
+}
+
 .input-field {
-    width: 40%;
+    width: 30%;
     height: 45px;
     padding: 20px;
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 30px;
     box-sizing: border-box; 
-}
-
-.input-field::placeholder {
-    color: #999;
-    font-size: 14px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    opacity: 1;
 }
 
 /* Remove as setas do input de número */
@@ -174,7 +241,7 @@ input[type="radio"]:checked::before {
     transform: translate(-50%, -50%);
 }
 
-.logar {
+.redefinir {
     color: #FF735C;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
@@ -182,10 +249,19 @@ input[type="radio"]:checked::before {
     font-size: 12px;
     margin-top: 25px;
     margin-bottom: 5px;
+    text-align: center;
 }
 
 a {
     color: #FF735C;
+}
+
+.editar {
+    width: 100%;
+    align-items: flex-end;
+    flex: 1;
+    padding-right: 20;
+    padding-bottom: 10;
 }
 
 .cadastro-button {
@@ -201,14 +277,22 @@ a {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 16px; 
+    position: absolute;
+    right: 70px;
+    bottom: 50px;
 }
 
 .cadastro-button:hover {
     opacity: 0.5;
 }
 
-footer {
+.cadastro-button img {
+    height: auto;
+    width: 40px;
+}
+
+/* footer {
     display: block;
 	bottom: 0;
 	background: #fff;
@@ -230,4 +314,4 @@ footer a {
 
 footer a:hover {
     color: #3F7263;
-}
+} */
