--- a/FUNCIONÁRIO(ADM)/perfilEditar/styles.css
+++ b/FUNCIONÁRIO(ADM)/perfilEditar/styles.css
@@ -1,8 +1,14 @@
-body, html {
+html, body {
     height: 100%;
     width: 100%;
     margin: 0;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
 }
 
 .header {
@@ -129,7 +135,7 @@ body, html {
 }
 
 .img-container {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .img-container img {
@@ -200,6 +206,25 @@ input[type=number]::-webkit-inner-spin-button {
     font-size: 15px;
 }
 
+/* Estilo para custom-file-upload */
+.custom-file-upload {
+    display: flex;
+    flex-direction: column;
+    padding: 8px 14px;
+    cursor: pointer;
+    background-color: #3F7263; /* Cor de fundo verde */
+    color: white; /* Cor do texto branco */
+    border: 1px solid #3F7263; /* Borda verde */
+    border-radius: 30px; /* Bordas arredondadas */
+    text-align: center;
+    font-size: 12px;
+    font-family: 'Poppins', sans-serif; /* Fonte Poppins */
+}
+
+.custom-file-upload:hover {
+    opacity: 0.5;
+}
+
 input[type="radio"] {
     appearance: none;
     -webkit-appearance: none;
@@ -247,17 +272,14 @@ a {
 }
 
 .editar {
+    display: flex;
+    justify-content: center;
     width: 100%;
-    align-items: flex-end;
-    flex: 1;
-    padding-right: 20;
-    padding-bottom: 10;
 }
 
 .cadastro-button {
-    width: 60px;
-    height: 60px;
-    padding: 10px;
+    height: 45px;
+    padding: 10px 30px;
     margin: 20px 0;
     background-color: #FF735C;
     color: white;
@@ -267,17 +289,9 @@ a {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px; 
-    position: absolute;
-    right: 70px;
-    bottom: 50px;
+    font-size: 16px;
 }
 
 .cadastro-button:hover {
-    background-color: #3F7263;
-}
-
-.cadastro-button img {
-    height: auto;
-    width: 40px;
+    opacity: 0.5;
 }
