--- a/FUNCIONÁRIO(ADM)/selecao/styles.css
+++ b/FUNCIONÁRIO(ADM)/selecao/styles.css
@@ -101,7 +101,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    max-width: 90%;
+    max-width: 95%;
     margin: 0 auto;
     gap: 10px;
     padding: 20px;
@@ -144,10 +144,11 @@ body {
 
 .p-usuario {
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
     font-size: 14px;
     text-align: center;
+    margin: 2px;
 }
 
 .opcao {
@@ -156,16 +157,9 @@ body {
     display: flex;
 }
 
-.select-label {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 16px;
-    color: #333;
-}
-
 .select-input {
-    width: 50%;
-    height: 45px;
+    width: 58%;
+    height: 40px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -174,6 +168,7 @@ body {
     background-color: #fff;
     font-family: "Poppins", sans-serif;
     margin: 14px;
+    font-size: 12px;
 }
 
 /* Opcional: Estilo para hover e focus */
@@ -215,35 +210,12 @@ body {
     text-align: center;
 }
 
-.profile-container {
-    text-align: center;
-    margin-right: 150px;
-}
-
-.img-container {
-    margin-bottom: 10px;
-}
-
-.img-container img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid #ccc;
-}
-
 .input-container {
     width: 100%;
 }
 
 input[type="file"] {
     display: none;
-}
-
-.input-group {
-    flex-direction: column;
-    margin-bottom: 10px;
-    display: flex;
 }
 
 .text-input {
@@ -253,93 +225,6 @@ input[type="file"] {
     font-size: 14px;
     width: 100%;
     margin: 0 auto;
-}
-
-.input-field {
-    width: 100%;
-    height: 45px;
-    padding: 20px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 30px;
-    box-sizing: border-box; 
-}
-
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-.sexo-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 12px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 14px;
-}
-
-.sexo-form legend {
-    margin: 0;
-    padding-right: 10px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 15px;
-}
-
-/* Estilo para custom-file-upload */
-.custom-file-upload {
-    display: flex;
-    flex-direction: column;
-    padding: 8px 14px;
-    cursor: pointer;
-    background-color: #3F7263; /* Cor de fundo verde */
-    color: white; /* Cor do texto branco */
-    border: 1px solid #3F7263; /* Borda verde */
-    border-radius: 30px; /* Bordas arredondadas */
-    text-align: center;
-    font-size: 12px;
-    font-family: 'Poppins', sans-serif; /* Fonte Poppins */
-}
-
-.custom-file-upload:hover {
-    opacity: 0.5;
-}
-
-input[type="radio"] {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    width: 16px;
-    height: 16px;
-    border: 1px solid #ccc;
-    border-radius: 50%;
-    background: #fff;
-    cursor: pointer;
-    position: relative;
-}
-
-input[type="radio"]:checked {
-    border: 1px solid #FF735C;
-    background-color: #FF735C;
-}
-
-input[type="radio"]:checked::before {
-    content: '';
-    display: block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .redefinir {
@@ -365,7 +250,8 @@ a {
 
 .confirm-button {
     height: 45px;
-    padding: 10px 30px;
+    width: 35%;
+    padding: 10px 20px;
     background-color: #FF735C;
     color: white;
     border: none;
@@ -374,21 +260,5 @@ a {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
-}
-
-.confirm-button:hover {
-    opacity: 0.5;
-}
-
-@media (max-width: 768px) {
-    .lineSquare {
-        flex: 1 1 calc(50% - 10px); /* 2 items per row on smaller screens */
-    }
-}
-
-@media (max-width: 480px) {
-    .lineSquare {
-        flex: 1 1 calc(100% - 10px); /* 1 item per row on very small screens */
-    }
+    font-size: 14px;
 }
