--- a/FUNCIONÁRIO(ADM)/infoContato/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoContato/styles.css
@@ -99,22 +99,14 @@ body {
 
 .container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     max-width: 95%;
     margin: 0 auto;
     gap: 10px;
     padding: 20px;
     box-sizing: border-box;
-}
-
-.lineSquare {
-    width: 600px;
-    box-sizing: border-box;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
 }
 
 .selecao {
@@ -127,31 +119,57 @@ body {
     text-align: center;
 }
 
-.horario {
-    color: #CCC;
-    margin-top: 3px;
-    margin-bottom: 5px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 12px;
-}
-
-.notify {
-    display: flex;
-    flex-direction: row;
-    margin: 3px;
-}
-
-.aviso {
+.img-contato {
     height: auto;
-    width: 50px;
-    margin-right: 5px;
+    width: 20%;
 }
 
-.mensagem {
+.escola {
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
+    font-weight: 600;
     font-style: normal;
-    font-size: 14px;
+    font-size: 18px;
+}
+
+.infos {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.editar {
+    width: 100%;
+    align-items: flex-end;
+    flex: 1;
+    padding-right: 20;
+    padding-bottom: 10;
+}
+
+.cadastro-button {
+    width: 60px;
+    height: 60px;
+    padding: 10px;
+    margin: 20px 0;
+    background-color: #FF735C;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px; 
+    position: absolute;
+    right: 70px;
+    bottom: 50px;
+}
+
+.cadastro-button:hover {
+    background-color: #3F7263;
+}
+
+.cadastro-button img {
+    height: auto;
+    width: 40px;
 }
