--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/styles.css
@@ -99,22 +99,13 @@ body {
 
 .container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     max-width: 95%;
     margin: 0 auto;
-    gap: 10px;
     padding: 20px;
     box-sizing: border-box;
-}
-
-.lineSquare {
-    width: 600px;
-    box-sizing: border-box;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 10px;
 }
 
 .selecao {
@@ -127,31 +118,58 @@ body {
     text-align: center;
 }
 
-.horario {
-    color: #CCC;
-    margin-top: 3px;
-    margin-bottom: 5px;
-    font-family: "Poppins", sans-serif;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 12px;
-}
-
-.notify {
-    display: flex;
-    flex-direction: row;
-    margin: 3px;
-}
-
-.aviso {
+.img-contato {
     height: auto;
-    width: 50px;
-    margin-right: 5px;
+    width: 20%;
 }
 
-.mensagem {
+/* .input-container {
+    width: 100%;
+} */
+
+input[type="file"] {
+    display: none;
+}
+
+.input-group {
+    flex-direction: column;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.input-field {
+    width: 100%;
+    height: 45px;
+    padding: 20px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 30px;
+    box-sizing: border-box; 
+}
+
+.editar {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.save-button {
+    height: 45px;
+    padding: 10px 30px;
+    margin: 20px 0;
+    background-color: #FF735C;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
     font-family: "Poppins", sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-style: normal;
-    font-size: 14px;
+    font-size: 16px;
+}
+
+.save-button:hover {
+    opacity: 0.5;
 }
