--- a/FUNCIONÁRIO(ADM)/perfilEditar/styles.css
+++ b/FUNCIONÁRIO(ADM)/perfilEditar/styles.css
@@ -277,7 +277,7 @@ a {
     width: 100%;
 }
 
-.cadastro-button {
+.save-button {
     height: 45px;
     padding: 10px 30px;
     margin: 20px 0;
@@ -292,6 +292,6 @@ a {
     font-size: 16px;
 }
 
-.cadastro-button:hover {
+.save-button:hover {
     opacity: 0.5;
 }
