--- a/FUNCIONÁRIO(ADM)/emprestimos/styles.css
+++ b/FUNCIONÁRIO(ADM)/emprestimos/styles.css
@@ -219,7 +219,7 @@ body {
     box-sizing: border-box;
 }
 
-.selecao {
+.emprestimo {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
