--- a/FUNCIONÁRIO(ADM)/notificacoes/styles.css
+++ b/FUNCIONÁRIO(ADM)/notificacoes/styles.css
@@ -117,7 +117,7 @@ body {
     padding: 10px;
 }
 
-.selecao {
+.notificacao {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
