--- a/FUNCIONÁRIO(ADM)/biblioteca/styles.css
+++ b/FUNCIONÁRIO(ADM)/biblioteca/styles.css
@@ -97,6 +97,29 @@ body {
     color: red;
 }
 
+.add-button {
+    right: 50px;
+    top: 150px;
+    position: absolute;
+    height: 40px;
+    padding: 10px 20px;
+    margin: 20px 0;
+    background-color: #3F7263;
+    color: white;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    text-align: center;
+}
+
+.add-button:hover {
+    opacity: 0.5;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -171,7 +194,7 @@ body {
     height: 80px;
     box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
     max-width: calc(16.66% - 20px); /* Garante que o item não exceda 1/6 do espaço disponível */
-    background: #FFF;
+    background: #3F7263;
     padding: 4px; /* Adiciona um padding interno */
     border-radius: 8px;
     text-align: center;
@@ -202,6 +225,11 @@ body {
     margin-bottom: 30px;
     cursor: pointer;
     width: 100%;
+}
+
+.book-list a {
+    text-decoration: none;
+    color: #000;
 }
 
 .book-item {
@@ -246,7 +274,7 @@ body {
     text-align: center;
 }
 
-.selecao {
+.biblioteca {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -254,4 +282,28 @@ body {
     margin-top: 25px;
     margin-bottom: 15px;
     text-align: center;
+}
+
+footer {
+    display: block;
+	bottom: 0;
+	background: #fff;
+	width: 100%;
+	color:#000;
+	text-align: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
+    font-size: 14px;
+}
+footer a {
+    color: #FF735C;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #3F7263;
 }
