--- a/FUNCIONÁRIO(ADM)/infoContato/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoContato/styles.css
@@ -109,7 +109,7 @@ body {
     box-sizing: border-box;
 }
 
-.selecao {
+.contato {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
