--- a/FUNCIONÁRIO(ADM)/infoContatoEditar/styles.css
+++ b/FUNCIONÁRIO(ADM)/infoContatoEditar/styles.css
@@ -102,13 +102,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 95%;
+    max-width: 100%;
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
 }
 
-.selecao {
+.contato {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
@@ -123,30 +123,44 @@ body {
     width: 20%;
 }
 
-/* .input-container {
-    width: 100%;
-} */
-
 input[type="file"] {
     display: none;
 }
 
-.input-group {
-    flex-direction: column;
-    margin-bottom: 10px;
+/* Ajustar a largura da .input-group e centralizar o input */
+.input-container {
+    width: 100%;
     display: flex;
+    justify-content: center;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
+    max-width: 500px; /* Ajuste conforme necessário */
 }
 
 .input-field {
     width: 100%;
     height: 45px;
-    padding: 20px;
-    margin: 10px 0;
+    padding: 10px 20px;
+    margin: 5px 0;
     border: 1px solid #ccc;
     border-radius: 30px;
     box-sizing: border-box; 
+    font-size: 16px; /* Ajusta o tamanho da fonte se necessário */
+}
+
+form {
+    width: 400px;
+}
+
+.infos-input {
+    height: 200px;
+    resize: vertical;
+    margin-top: 0px;
 }
 
 .editar {
