--- a/FUNCIONÁRIO(ADM)/recomendacao/styles.css
+++ b/FUNCIONÁRIO(ADM)/recomendacao/styles.css
@@ -202,7 +202,7 @@ body {
     text-align: center;
 }
 
-.selecao {
+.recomendacao {
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     font-weight: 600;
