--- a/FUNCIONÁRIO(ADM)/recomendacao/styles.css
+++ b/FUNCIONÁRIO(ADM)/recomendacao/styles.css
@@ -97,6 +97,78 @@ body {
     color: red;
 }
 
+.icon {
+    height: auto;
+    width: 40px;
+    margin-bottom: 0px;
+}
+
+.text-icon {
+    font-size: 10px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    margin-top: 0px;
+}
+
+.book-genre-container {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 20px;
+    display: flex;
+    gap: 10px; /* Espaçamento entre os livros */
+    justify-content: center;
+    max-width: 70%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.genre-buttons {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap; /* Permite que os itens se movam para a próxima linha se não houver espaço suficiente */
+    gap: 10px; /* Espaçamento entre os livros */
+    justify-content: center;
+    max-width: 100%;
+    margin-bottom: 30px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.book-genre {
+    width: 90px;
+    height: 90px;
+    box-sizing: border-box; /* Inclui o padding e border no cálculo da largura total */
+    max-width: calc(16.66% - 20px); /* Garante que o item não exceda 1/6 do espaço disponível */
+    background: #599684;
+    padding: 4px; /* Adiciona um padding interno */
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.288); /* Adiciona uma sombra leve ao redor dos itens */
+}
+
+.genre-button:hover, .genre-button:focus {
+    background-color: #45a049;
+}
+
+.genre-button:active {
+    background-color: #3e8e41; /* Cor de fundo mais escura para indicar o clique */
+    box-shadow: 0 5px #666;    /* Sombra para parecer afundado */
+    transform: translateY(4px); /* Move o botão para baixo */
+}
+
+main {
+    flex: 1; /* Faz o main ocupar o espaço restante */
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -210,4 +282,28 @@ body {
     margin-top: 25px;
     margin-bottom: 15px;
     text-align: center;
+}
+
+footer {
+    display: block;
+	bottom: 0;
+	background: #fff;
+	width: 100%;
+	color:#000;
+	text-align: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.288);
+    font-size: 14px;
+}
+footer a {
+    color: #FF735C;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #3F7263;
 }
